<resources>
    <string name="app_name">Сообщения</string>
    <string name="action_settings">Настройки</string>
    <string name="from">От</string>
    <string name="to">Кому</string>
    <string name="subject">Тема</string>
    <string name="text">Текст сообщения</string>
    <string name="business_signature">Деловая подпись</string>
    <string name="send">Отправить</string>
    <string name="forward">Вперед</string>
    <string name="reply">Ответить</string>
</resources>
